Fix Scrollbar for Windows

--- a/frontend/src/components/IngredientsSelect/style.scss
+++ b/frontend/src/components/IngredientsSelect/style.scss
@@ -33,7 +33,30 @@
 @media (min-width: 769px) {
   .ingredients {
     .grid {
-      width: 710px;
+      width: 715px;
     }
+  }
+
+  /* total width */
+  .grid::-webkit-scrollbar {
+    background-color: #fff;
+    width: 16px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  .grid::-webkit-scrollbar-track {
+    background-color: #fff;
+  }
+
+  /* scrollbar itself */
+  .grid::-webkit-scrollbar-thumb {
+    background-color: red;
+    border-radius: 16px;
+    border: 4px solid #fff;
+  }
+
+  /* set button(top and bottom of the scrollbar) */
+  .grid::-webkit-scrollbar-button {
+    display:none;
   }
 }
