--- a/frontend/src/components/IngredientsTab/style.scss
+++ b/frontend/src/components/IngredientsTab/style.scss
@@ -19,7 +19,7 @@
 @media (min-width: 769px) {
 .ingredients-tab {
   .grid {
-    width: 702px;
+    width: 715px;
   }
 }
 }
